# pora

./: GRAMMAR.txt  IR.txt  LICENSE  README.md
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  poAnalyzer.cpp  poAnalyzer.h  poAsm.cpp  poAsm.h  po_x86_64.cpp  po_x86_64.h
src/core/: CMakeLists.txt  poAST.cpp  poAST.h  poCFG.cpp  poCFG.h  poCOFF.cpp  poCOFF.h  poCallGraph.cpp  poCallGraph.h  poCycle.cpp  poCycle.h  poDWARF.cpp  poDWARF.h  poDWARFMachine.cpp  poDWARFMachine.h  poDebug.cpp  poDebug.h  poDom.cpp  poDom.h  poELF.cpp  poELF.h  poEval.cpp  poEval.h  poFile.cpp  poFile.h  poLex.cpp  poLex.h  poLive.cpp  poLive.h  poModule.cpp  poModule.h  poMorph.cpp  poMorph.h  poNLF.cpp  poNLF.h  poOptCopy.cpp  poOptCopy.h  poOptDCE.cpp  poOptDCE.h  poOptFold.cpp  (+33 more)
src/examples/: CalendarApp.po  ControlApp.po  Example.po  Example10.po  Example2.po  Example3.po  Example4.po  Example5.po  Example6.po  Example7.po  Example8.po  Example9.po  ProcApp.po  TimerApp.po
src/porac/: CMakeLists.txt  poApp.cpp  poAsm.cpp  poAsm.h  poCompiler.cpp  poCompiler.h  poEmit.cpp  poEmit.h
src/std/: calendar.po  clock.po  control.po  date.po  io.po  list.po  map.po  memory.po  numeric.po  os.po  pora.po  process.po  socket.po  string.po  string_class.po  traits.po
src/std/unix/: clock.po  control.po  date.po  io.po  memory.po  native_socket.po  os.po
src/std/win/: control.po  date.po  io.po  memory.po  native_socket.po  os.po
src/test/: CMakeLists.txt  poCycleTest.cpp  poCycleTest.h  poDominatorTest.cpp  poDominatorTest.h  poIntegrationTest.cpp  poIntegrationTest.h  poLiveTests.cpp  poLiveTests.h  poNLFTests.cpp  poNLFTests.h  poOptDCETests.cpp  poOptDCETests.h  poOptMemoryToRegTests.cpp  poOptMemoryToRegTests.h  poRegGraphTests.cpp  poRegGraphTests.h  poRegLinearTests.cpp  poRegLinearTests.h  poSCCTests.cpp  poSCCTests.h  poSSATests.cpp  poSSATests.h  poSyntaxTests.cpp  poSyntaxTests.h  poTestApp.cpp  poTestApp.h
src/test/cases/allocator/: allocator_001.po  allocator_002.po  allocator_003.po  allocator_003.po.out  allocator_004.po  allocator_005.po
src/test/cases/arithmetic/: arithmetic_001.po  arithmetic_002.po  arithmetic_003.po  arithmetic_003.po.out  arithmetic_004.po  arithmetic_005.po  arithmetic_006.po  arithmetic_007.po  arithmetic_008.po  arithmetic_008.po.out  arithmetic_009.po  arithmetic_010.po  arithmetic_011.po
src/test/cases/arrays/: arrays_001.po  arrays_002.po  arrays_002.po.out  arrays_003.po  arrays_004.po  arrays_005.po  arrays_005.po.out  arrays_006.po  arrays_007.po  arrays_008.po  arrays_008.po.out  arrays_009.po  arrays_009.po.out  arrays_010.po  arrays_011.po  arrays_011.po.out  arrays_012.po  arrays_012.po.out  arrays_013.po  arrays_013.po.out
src/test/cases/calendar/: calendar_001.po  calendar_001.po.out
src/test/cases/classes/: classes_001.po  classes_001.po.out  classes_002.po  classes_003.po  classes_004.po  classes_005.po  classes_005.po.out  classes_006.po  classes_006.po.out  classes_007.po  classes_007.po.out  classes_008.po  classes_008.po.out  classes_009.po  classes_009.po.out  classes_010.po  classes_011.po  classes_011.po.out  classes_012.po  classes_012.po.out  classes_013.po  classes_013.po.out  classes_014.po  classes_014.po.out  classes_015.po  classes_015.po.out  classes_016.po
src/test/cases/clock/: clock_001.po  clock_001.po.out  clock_002.po  clock_002.po.out
src/test/cases/convert/: convert_001.po  convert_001.po.out  convert_002.po
src/test/cases/dynamic_array/: dynamic_array_001.po  dynamic_array_001.po.out
src/test/cases/enums/: enums_001.po  enums_001.po.out  enums_002.po  enums_002.po.out  enums_003.po  enums_003.po.out  enums_004.po  enums_004.po.out  enums_005.po
src/test/cases/flowcontrol/: flowcontrol_001.po  flowcontrol_001.po.out  flowcontrol_002.po  flowcontrol_002.po.out  flowcontrol_003.po  flowcontrol_003.po.out  flowcontrol_004.po  flowcontrol_004.po.out  flowcontrol_005.po  flowcontrol_006.po  flowcontrol_006.po.out  flowcontrol_007.po  flowcontrol_007.po.out
src/test/cases/functions/: functions_001.po  functions_002.po  functions_002.po.out  functions_003.po  functions_004.po  functions_005.po  functions_005.po.out  functions_006.po  functions_007.po  functions_008.po
src/test/cases/generic/: generic_001.po  generic_001.po.out  generic_002.po  generic_003.po  generic_004.po  generic_004.po.out  generic_005.po  generic_006.po  generic_007.po  generic_007.po.out
src/test/cases/inline/: inline_001.po  inline_002.po
src/test/cases/list/: list_001.po  list_002.po  list_002.po.out  list_003.po  list_003.po.out  list_004.po  list_005.po  list_005.po.out  list_006.po  list_006.po.out
src/test/cases/map/: map_001.po  map_002.po  map_003.po  map_004.po  map_005.po  map_005.po.out
src/test/cases/memory/: memory_001.po  memory_001.po.out  memory_002.po  memory_003.po  memory_003.po.out
src/test/cases/pointers/: pointers_001.po  pointers_002.po  pointers_003.po  pointers_004.po  pointers_005.po  pointers_006.po  pointers_006.po.out  pointers_007.po  pointers_007.po.out  pointers_008.po
src/test/cases/statics/: statics_001.po  statics_001.po.out  statics_002.po  statics_003.po  statics_004.po  statics_005.po  statics_005.po.out  statics_006.po  statics_007.po  statics_008.po  statics_009.po
src/test/cases/strings/: strings_001.po  strings_001.po.out  strings_002.po
src/test/cases/structs/: structs_001.po  structs_002.po  structs_002.po.out  structs_003.po  structs_004.po  structs_005.po  structs_005.po.out
src/tools/: CMakeLists.txt
src/tools/codegen/: CMakeLists.txt  poCodeGen.cpp  poCodeGen.h
src/tools/control/: CMakeLists.txt  poControl.cpp
src/tools/dump/: CMakeLists.txt  poDump.cpp  poDump.h
